create table public.role (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint role_pkey primary key (id),
  constraint role_name_key unique (name)
) TABLESPACE pg_default;

create table public.region (
  id bigint generated by default as identity not null,
  name character varying not null,
  constraint region_pkey primary key (id),
  constraint region_name_key unique (name)
) TABLESPACE pg_default;

create table public.workshop (
  id bigint generated by default as identity not null,
  name character varying not null,
  address character varying null,
  phone character varying null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  email character varying null,
  constraint workshop_pkey primary key (id),
  constraint workshop_address_key unique (address),
  constraint workshop_email_key unique (email),
  constraint workshop_name_key unique (name),
  constraint workshop_phone_key unique (phone)
) TABLESPACE pg_default;

create table public.vehicle_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint vehicle_type_pkey primary key (id),
  constraint vehicle_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.vehicle_status (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint vehicle_status_pkey primary key (id),
  constraint vehicle_status_name_key unique (name)
) TABLESPACE pg_default;

create table public.fuel_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint fuel_type_pkey primary key (id),
  constraint fuel_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.transmission_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint transmission_type_pkey primary key (id),
  constraint transmission_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.oil_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint oil_type_pkey primary key (id),
  constraint oil_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.coolant_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint coolant_type_pkey primary key (id),
  constraint coolant_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.task_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint task_type_pkey primary key (id),
  constraint task_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.spare_part (
  id bigint generated by default as identity not null,
  name character varying not null,
  sku character varying not null,
  brand character varying null,
  description text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint spare_part_pkey primary key (id),
  constraint spare_part_sku_key unique (sku)
) TABLESPACE pg_default;

create table public.maintenance_order_status (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  constraint maintenance_order_status_pkey primary key (id),
  constraint maintenance_order_status_name_key unique (name)
) TABLESPACE pg_default;

create table public.maintenance_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  created_at timestamp without time zone not null default now(),
  constraint maintenance_type_pkey primary key (id),
  constraint maintenance_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.province (
  id bigint generated by default as identity not null,
  name character varying not null,
  region_id bigint not null,
  constraint province_pkey primary key (id),
  constraint province_name_key unique (name),
  constraint province_region_id_fkey foreign KEY (region_id) references region (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.supplier (
  id bigint generated by default as identity not null,
  name character varying not null,
  rut character varying null,
  address character varying null,
  phone character varying null,
  email character varying null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  workshop_id bigint null,
  constraint supplier_pkey primary key (id),
  constraint supplier_name_key unique (name),
  constraint supplier_rut_key unique (rut),
  constraint supplier_workshop_id_fkey foreign KEY (workshop_id) references workshop (id) on update CASCADE on delete CASCADE
) TABLESPACE pg_default;

create table public.commune (
  id bigint generated by default as identity not null,
  name character varying not null,
  province_id bigint not null,
  constraint commune_pkey primary key (id),
  constraint commune_name_key unique (name),
  constraint commune_province_id_fkey foreign KEY (province_id) references province (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.fire_station (
  id bigint generated by default as identity not null,
  name character varying not null,
  address character varying not null,
  commune_id bigint not null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint fire_station_pkey primary key (id),
  constraint fire_station_address_key unique (address),
  constraint fire_station_name_key unique (name),
  constraint fire_station_commune_id_fkey foreign KEY (commune_id) references commune (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.vehicle (
  id bigint generated by default as identity not null,
  license_plate character varying not null,
  brand character varying not null,
  model character varying not null,
  year bigint not null,
  engine_number character varying not null,
  vin character varying not null,
  mileage bigint null,
  mileage_last_updated date null,
  oil_capacity_liters double precision null,
  registration_date date null,
  next_revision_date date null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  fire_station_id bigint not null,
  vehicle_type_id bigint not null,
  vehicle_status_id bigint not null,
  fuel_type_id bigint null,
  transmission_type_id bigint null,
  oil_type_id bigint null,
  coolant_type_id bigint null,
  constraint vehicle_pkey primary key (id),
  constraint vehicle_license_plate_key unique (license_plate),
  constraint vehicle_engine_number_key unique (engine_number),
  constraint vehicle_vin_key unique (vin),
  constraint vehicle_transmission_type_id_fkey foreign KEY (transmission_type_id) references transmission_type (id) on update CASCADE on delete RESTRICT,
  constraint vehicle_vehicle_status_id_fkey foreign KEY (vehicle_status_id) references vehicle_status (id) on update CASCADE on delete RESTRICT,
  constraint vehicle_vehicle_type_id_fkey foreign KEY (vehicle_type_id) references vehicle_type (id) on update CASCADE on delete RESTRICT,
  constraint vehicle_oil_type_id_fkey foreign KEY (oil_type_id) references oil_type (id) on update CASCADE on delete RESTRICT,
  constraint vehicle_fire_station_id_fkey foreign KEY (fire_station_id) references fire_station (id) on update CASCADE on delete RESTRICT,
  constraint vehicle_fuel_type_id_fkey foreign KEY (fuel_type_id) references fuel_type (id) on update CASCADE on delete RESTRICT,
  constraint vehicle_coolant_type_id_fkey foreign KEY (coolant_type_id) references coolant_type (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.user_profile (
  id uuid not null default auth.uid (),
  first_name character varying not null,
  last_name character varying not null,
  rut character varying null,
  phone character varying null,
  is_active boolean not null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  role_id bigint not null,
  workshop_id bigint null,
  fire_station_id bigint null,
  constraint user_profile_pkey primary key (id),
  constraint user_profile_rut_key unique (rut),
  constraint user_profile_fire_station_id_fkey foreign KEY (fire_station_id) references fire_station (id) on update CASCADE on delete set null,
  constraint user_profile_id_fkey foreign KEY (id) references auth.users (id) on update CASCADE on delete CASCADE,
  constraint user_profile_role_id_fkey foreign KEY (role_id) references role (id) on update CASCADE on delete RESTRICT,
  constraint user_profile_workshop_id_fkey foreign KEY (workshop_id) references workshop (id) on update CASCADE on delete set null
) TABLESPACE pg_default;

create table public.workshop_inventory (
  id bigint generated by default as identity not null,
  quantity bigint not null,
  current_cost double precision not null,
  location character varying null,
  workshop_sku character varying null,
  updated_at timestamp without time zone null,
  spare_part_id bigint not null,
  workshop_id bigint not null,
  supplier_id bigint null,
  last_updated_by_user_id uuid null,
  constraint workshop_inventory_pkey primary key (id),
  constraint workshop_inventory_spare_part_workshop_key unique (spare_part_id, workshop_id),
  constraint workshop_inventory_last_updated_by_user_id_fkey foreign KEY (last_updated_by_user_id) references user_profile (id) on update CASCADE on delete set null,
  constraint workshop_inventory_spare_part_id_fkey foreign KEY (spare_part_id) references spare_part (id) on update CASCADE on delete RESTRICT,
  constraint workshop_inventory_supplier_id_fkey foreign KEY (supplier_id) references supplier (id) on update CASCADE on delete set null,
  constraint workshop_inventory_workshop_id_fkey foreign KEY (workshop_id) references workshop (id) on update CASCADE on delete CASCADE
) TABLESPACE pg_default;

create table public.maintenance_order (
  id bigint generated by default as identity not null,
  entry_date date not null,
  exit_date date null,
  mileage bigint not null,
  total_cost double precision null,
  observations text null,
  created_at timestamp without time zone null default now(),
  updated_at timestamp without time zone null default now(),
  workshop_id bigint not null,
  vehicle_id bigint not null,
  assigned_mechanic_id uuid null,
  order_status_id bigint not null,
  maintenance_type_id bigint not null,
  constraint maintenance_order_pkey primary key (id),
  constraint maintenance_order_assigned_mechanic_id_fkey foreign KEY (assigned_mechanic_id) references user_profile (id) on update CASCADE on delete set null,
  constraint maintenance_order_maintenance_type_id_fkey foreign KEY (maintenance_type_id) references maintenance_type (id) on update CASCADE on delete RESTRICT,
  constraint maintenance_order_order_status_id_fkey foreign KEY (order_status_id) references maintenance_order_status (id) on update CASCADE on delete RESTRICT,
  constraint maintenance_order_vehicle_id_fkey foreign KEY (vehicle_id) references vehicle (id) on update CASCADE on delete CASCADE,
  constraint maintenance_order_workshop_id_fkey foreign KEY (workshop_id) references workshop (id) on update CASCADE on delete CASCADE
) TABLESPACE pg_default;

create table public.vehicle_status_log (
  id bigint generated by default as identity not null,
  change_date timestamp without time zone not null,
  reason text null,
  created_at timestamp without time zone not null default now(),
  vehicle_id bigint not null,
  vehicle_status_id bigint not null,
  changed_by_user_id uuid null,
  constraint vehicle_status_log_pkey primary key (id),
  constraint vehicle_status_log_changed_by_user_id_fkey foreign KEY (changed_by_user_id) references user_profile (id) on update CASCADE on delete set null,
  constraint vehicle_status_log_vehicle_id_fkey foreign KEY (vehicle_id) references vehicle (id) on update CASCADE on delete CASCADE,
  constraint vehicle_status_log_vehicle_status_id_fkey foreign KEY (vehicle_status_id) references vehicle_status (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.maintenance_task (
  id bigint generated by default as identity not null,
  description text null,
  cost double precision not null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  task_type_id bigint not null,
  maintenance_order_id bigint not null,
  constraint maintenance_task_pkey primary key (id),
  constraint maintenance_task_maintenance_order_id_fkey foreign KEY (maintenance_order_id) references maintenance_order (id) on update CASCADE on delete CASCADE,
  constraint maintenance_task_task_type_id_fkey foreign KEY (task_type_id) references task_type (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.maintenance_task_part (
  id bigint generated by default as identity not null,
  quantity_used bigint not null,
  cost_per_unit double precision null,
  created_at timestamp without time zone not null default now(),
  workshop_inventory_id bigint not null,
  maintenance_task_id bigint not null,
  constraint maintenance_task_part_pkey primary key (id),
  constraint maintenance_task_part_maintenance_task_id_fkey foreign KEY (maintenance_task_id) references maintenance_task (id) on update CASCADE on delete CASCADE,
  constraint maintenance_task_part_workshop_inventory_id_fkey foreign KEY (workshop_inventory_id) references workshop_inventory (id) on update CASCADE on delete RESTRICT
) TABLESPACE pg_default;

create table public.request_type (
  id bigint generated by default as identity not null,
  name character varying not null,
  description text null,
  target_table character varying not null,
  form_schema jsonb not null,
  created_at timestamp without time zone not null default now(),
  constraint request_type_pkey primary key (id),
  constraint request_type_name_key unique (name)
) TABLESPACE pg_default;

create table public.data_request (
  id bigint generated by default as identity not null,
  requesting_user_id uuid null,
  request_type_id bigint not null,
  requested_data jsonb not null,
  status character varying not null,
  admin_notes text null,
  created_at timestamp without time zone not null default now(),
  updated_at timestamp without time zone null default now(),
  constraint data_request_pkey primary key (id),
  constraint data_request_request_type_id_fkey foreign KEY (request_type_id) references request_type (id) on update CASCADE on delete RESTRICT,
  constraint data_request_requesting_user_id_fkey foreign KEY (requesting_user_id) references user_profile (id) on update CASCADE on delete set null
) TABLESPACE pg_default;